yaml/fluentbit.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: fluent-bit
  namespace: kube-system
  labels:
    k8s-app: fluent-bit-logging
spec:
  selector:
    matchLabels:
      k8s-app: fluent-bit-logging  # Ensure this matches your pod template labels
  template:
    metadata:
      labels:
        k8s-app: fluent-bit-logging  # Ensure this matches your selector labels
    spec:
      serviceAccountName: fluent-bit
      containers:
        - name: fluent-bit
          securityContext:
            capabilities:
              add:
                - CAP_SYS_ADMIN
          image: fluent/fluent-bit:1.9.10
          volumeMounts:
            - name: config
              mountPath: /fluent-bit/etc
            - name: varlog
              mountPath: /var/log
            - name: varlibdockercontainers
              mountPath: /var/lib/docker/containers
              readOnly: true
            - name: varlogjournal
              mountPath: /var/log/journal
              readOnly: true
            - name: runlogjournal
              mountPath: /run/log/journal
              readOnly: true
      terminationGracePeriodSeconds: 30
      volumes:
        - name: config
          configMap:
            name: fluent-bit-config
        - name: varlog
          hostPath:
            path: /var/log
        - name: varlibdockercontainers
          hostPath:
            path: /var/lib/docker/containers
        - name: varlogjournal
          hostPath:
            path: /var/log/journal
        - name: runlogjournal
          hostPath:
            path: /run/log/journal
      tolerations:
        - key: node-role.kubernetes.io/master
          effect: NoSchedule
