yaml/j-back-dep.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: j-backend-dep
  labels:
    app: j-backend
spec:
  revisionHistoryLimit: 2
  replicas: 1
  selector:
    matchLabels:
      app: j-backend
  template:
    metadata:
      labels:
        app: j-backend
    spec:
      containers:
      - name: j-backend-container
        image: 355627705292.dkr.ecr.ap-northeast-1.amazonaws.com/engking-dynamo:28
        ports:
        - containerPort: 8080
