yaml/n-back-dep.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: n-backend-dep
  labels:
    app: n-backend
spec:
  replicas: 1
  revisionHistoryLimit: 2
  selector:
    matchLabels:
      app: n-backend
  template:
    metadata:
      labels:
        app: n-backend
    spec:
      containers:
      - name: n-backend-container
        image: 355627705292.dkr.ecr.ap-northeast-1.amazonaws.com/voice:28
        ports:
        - containerPort: 8000
