yaml/s-back-dep.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: s-backend-dep
  labels:
    app: s-backend
spec:
  replicas: 1
  revisionHistoryLimit: 2
  selector:
    matchLabels:
      app: s-backend
  template:
    metadata:
      labels:
        app: s-backend
    spec:
      containers:
      - name: s-backend-container
        image: 355627705292.dkr.ecr.ap-northeast-1.amazonaws.com/engking-member:25
        ports:
        - containerPort: 8080
