yaml/j-back-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: j-back-service
spec:
  selector:
    app: j-backend
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
