yaml/s-back-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: s-back-service
spec:
  selector:
    app: s-backend
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
